--- a/app/globals.css
+++ b/app/globals.css
@@ -155,3 +155,13 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #30AF5B;
+  transition: all 2s;
+}
